--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <!-- Sets the width of the visible area for the user based on their device and the initial zoom level -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Travel the World</title>
+    <meta name="description" content="Udacity Front End Web Developer Project 1: Personal Blog Website" />
+    <meta name="author" content="Viren Mody">
+</head>
 
     <body>
         <h1></h1>
