added main body structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,52 @@
     <meta name="author" content="Viren Mody">
 </head>
 
-    <body>
-        <h1></h1>
-    </body>
+<body>
+
+    <!-- Top Navigation Bar -->
+    <div class="navbar">
+        <a href="#">Viren's Blog</a>
+        <a href="#">Home</a>
+        <a href="#blog">Blog</a>
+        <a href="#about">About</a>
+    </div>
+
+    <!-- Cover image -->
+    <div class="cover-image">
+        <img/>
+        <h2>Travel and Photography</h2>
+    </div>
+
+    <!-- Places container -->
+    <div class="places-container">
+        
+        <!-- Place 1 -->
+        <div class="place-card">
+            <img class="place-card-image">
+            <h3 class="place-card-title"></h3>
+            <p class="place-card-desc"></p>
+        </div>
+
+        <!-- Place 2 -->
+        <div class="place-card">
+            <img class="place-card-image">
+            <h3 class="place-card-title"></h3>
+            <p class="place-card-desc"></p>
+        </div>
+
+        <!-- Place 3 -->
+        <div class="place-card">
+            <img class="place-card-image">
+            <h3 class="place-card-title"></h3>
+            <p class="place-card-desc"></p>
+        </div>
+
+    </div>
+
+
+    <!-- Footer -->
+    <div class="footer">
+
+    </div>
+</body>
 </html>
